# AKEngine

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  main.cpp
include/akengine/: AKEngine.h
include/akengine/Renderer/: GameObject.h  Renderer.h  Scene.h
include/akengine/Renderer/Components/: Camera.h  Component.h  Light.h  MeshRenderer.h  Transform.h
include/akengine/Renderer/Materials/: Material.h
include/akengine/Renderer/Materials/Meshes/: Mesh.h  Point.h  PointsMesh.h  Vertex.h
include/akengine/Renderer/Materials/Meshes/ExampleMeshes/: PointMesh.h
include/akengine/Renderer/Materials/Shaders/: Shader.h  SurfaceShader.h
include/akengine/Renderer/Materials/Shaders/Unlit/: UnlitShader.h
include/akengine/Utilities/: GLDebug.h  WorkingDirectory.h
src/: AKEngine.cpp  CMakeLists.txt
src/Renderer/: CMakeLists.txt  GameObject.cpp  Renderer.cpp  Scene.cpp
src/Renderer/Components/: CMakeLists.txt  Camera.cpp  Component.cpp  Light.cpp  MeshRenderer.cpp  Transform.cpp
src/Renderer/Materials/: CMakeLists.txt  Material.cpp
src/Renderer/Materials/Meshes/: Mesh.cpp  PointsMesh.cpp
src/Renderer/Materials/Meshes/ExampleMeshes/: CMakeLists.txt  PointMesh.cpp
src/Renderer/Materials/Shaders/: CMakeLists.txt  Shader.cpp  SurfaceShader.cpp  VertexAttrib.h
src/Renderer/Materials/Shaders/Unlit/: CMakeLists.txt  UnlitShader.cpp  UnlitShader.fsh  UnlitShader.vsh
src/Utilities/: CMakeLists.txt  GLDebug.cpp  WorkingDirectory.cpp
tests/: CMakeLists.txt  main.cpp
tests/Renderer/: CMakeLists.txt  GameObjectTest.cpp  GameObjectTest.h  RendererTest.cpp  RendererTest.h
tests/Renderer/Components/: CMakeLists.txt  ComponentTest.cpp  ComponentTest.h  LightTest.cpp  LightTest.h  TransformTest.cpp  TransformTest.h
tests/Renderer/Materials/Shaders/: ShaderTest.cpp  ShaderTest.h  SurfaceShaderTest.cpp  SurfaceShaderTest.h
tests/Renderer/Materials/Shaders/Unlit/: UnlitShaderTest.cpp  UnlitShaderTest.h
